[package]
name = "fd-lock"
version = "4.0.2"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yoshuawuyts/fd-lock"
documentation = "https://docs.rs/fd-lock"
description = "Advisory cross-platform lock on a file using a file descriptor to it."
keywords = ["file", "fd", "lock", "windows", "unix"]
categories = ["filesystem", "os", "os::macos-apis", "os::unix-apis", "os::windows-apis"]
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
readme = "README.md"
edition = "2021"

[features]
default = ["async"]
async = ["dep:tokio"]

[dependencies]
cfg-if = "1.0.0"
tokio = { version = "1.38.0", features = ["rt", "sync"], optional = true }

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.52.0"
features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
]

[target.'cfg(unix)'.dependencies]
rustix = { version = "0.38.0", features = ["fs"] }

[dev-dependencies]
paste = "1.0.15"
polonius-the-crab = "0.4.1"
tempfile = "3.0.8"
async-trait = "0.1.80"
tokio = { version = "1.38.0", features = ["macros", "time"] }
