[package]
name = "async-fd-lock"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Limeth/async-fd-lock"
documentation = "https://docs.rs/async-fd-lock"
description = "Advisory cross-platform file locks using file descriptors with async support by spawning blocking tasks."
keywords = ["file", "fd", "lock", "async"]
categories = ["filesystem", "os", "asynchronous"]
authors = ["Jakub Hlusička", "Yoshua Wuyts <yoshuawuyts@gmail.com>"]
readme = "README.md"
edition = "2021"
exclude = [".github", ".vscode"]

[features]
default = ["async"]
async = ["dep:tokio"]

[dependencies]
async-trait = "0.1.80"
cfg-if = "1.0.0"
pin-project = "1.1.5"
tokio = { version = "1.38.0", features = ["rt", "sync"], optional = true }

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.52.0"
features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
]

[target.'cfg(unix)'.dependencies]
rustix = { version = "0.38.0", features = ["fs"] }

[dev-dependencies]
futures = "0.3.30"
paste = "1.0.15"
tempfile = "3.0.8"
tokio = { version = "1.38.0", features = ["macros", "time", "fs", "io-util"] }
tokio-test = "0.4.4"
